@@ -24,6 +24,7 @@ Jump Start Changelog
 * Added option to insert search popup into main menu for Super User and Executive theme bases.
 * Added color selection to custom font option of Entrepreneur theme base.
 * Added border option for content areas of all theme bases, when using the stretch layout.
+* Added custom color option for main menu dividers in Super User and Executive theme bases.
 * Added support for Revolution Slider in Layout Builder.
 * Improvements, structural changes, and option changes to header of Executive theme base.
 * Allow header in Entrepreneur theme base to be configured with no background color.
